--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   color: #fff;
   padding: 300px;
   font-family: "Permanent Marker", cursive;
+  background-color: #00000063;
   background-image: url("img/home.jpg");
   text-align: center;
   /* align-items: center;
@@ -17,7 +18,6 @@ body {
   background-size: cover;
   background-position: center;
   font-size: 25px;
-  
 }
 /* #home h1 {
   width: 50%;
